--- a/app/src/main/res/layout/practice_nav_layout.xml
+++ b/app/src/main/res/layout/practice_nav_layout.xml
@@ -6,6 +6,7 @@
     android:paddingVertical="20dp">
 
     <ImageView
+        android:id="@+id/home_nav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -15,6 +16,7 @@
         android:src="@drawable/home_btn_nav"/>
 
     <ImageView
+        android:id="@+id/back_nav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -23,6 +25,7 @@
         android:src="@drawable/back_btn_nav"/>
 
     <ImageView
+        android:id="@+id/next_nav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
