--- a/app/src/main/res/layout/activity_new_screen_practice.xml
+++ b/app/src/main/res/layout/activity_new_screen_practice.xml
@@ -38,6 +38,15 @@
 
             </LinearLayout>
 
+            <!-- 추가된 TextView -->
+            <TextView
+                android:id="@+id/description_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#001CFF"
+                android:textSize="25dp"
+                android:visibility="gone" />
+
             <ImageView
                 android:id="@+id/icon_image"
                 android:layout_width="130dp"
@@ -52,119 +61,195 @@
                 android:padding="10dp"
                 android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/choose_option1_btn"
-                android:layout_width="312dp"
-                android:layout_height="55dp"
-                android:layout_marginTop="15dp"
-                android:layout_gravity="center"
-                app:cardBackgroundColor="#ffffff"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="0dp"
-                app:cardPreventCornerOverlap="true"
-                app:cardUseCompatPadding="true">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="20dp"
-                    android:textSize="25dp"
-                    android:text="1. 블루투스"
-                    android:textColor="@android:color/black"
-                    android:textStyle="bold" />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/choose_option2_btn"
-                android:layout_width="312dp"
-                android:layout_height="55dp"
-                android:layout_marginTop="15dp"
-                android:layout_gravity="center"
-                app:cardBackgroundColor="#ffffff"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="0dp"
-                app:cardPreventCornerOverlap="true"
-                app:cardUseCompatPadding="true">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="20dp"
-                    android:textSize="25dp"
-                    android:text="2. 음량"
-                    android:textColor="@android:color/black"
-                    android:textStyle="bold" />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/choose_option3_btn"
-                android:layout_width="312dp"
-                android:layout_height="55dp"
-                android:layout_marginTop="15dp"
-                android:layout_gravity="center"
-                app:cardBackgroundColor="#ffffff"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="0dp"
-                app:cardPreventCornerOverlap="true"
-                app:cardUseCompatPadding="true">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="20dp"
-                    android:textSize="25dp"
-                    android:text="3. 신호"
-                    android:textColor="@android:color/black"
-                    android:textStyle="bold" />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/choose_option4_btn"
-                android:layout_width="312dp"
-                android:layout_height="55dp"
-                android:layout_marginTop="15dp"
-                android:layout_gravity="center"
-                app:cardBackgroundColor="#ffffff"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="0dp"
-                app:cardPreventCornerOverlap="true"
-                app:cardUseCompatPadding="true">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="20dp"
-                    android:textSize="25dp"
-                    android:text="4. 와이파이"
-                    android:textColor="@android:color/black"
-                    android:textStyle="bold" />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/iconStart_btn"
-                android:layout_width="200dp"
-                android:layout_height="75dp"
-                android:layout_marginTop="38dp"
-                android:layout_gravity="center"
-                app:cardBackgroundColor="#D25A5A"
-                app:cardCornerRadius="16dp"
-                app:cardElevation="0dp"
-                app:cardPreventCornerOverlap="true"
-                app:cardUseCompatPadding="true">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/choose_option1_btn"
+                    android:layout_width="312dp"
+                    android:layout_height="55dp"
+                    android:layout_marginTop="15dp"
                     android:layout_gravity="center"
-                    android:textSize="30dp"
-                    android:text="문제풀기"
-                    android:textColor="@android:color/white"
-                    android:textStyle="bold" />
-            </androidx.cardview.widget.CardView>
+                    app:cardBackgroundColor="#ffffff"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="0dp"
+                    app:cardPreventCornerOverlap="true"
+                    app:cardUseCompatPadding="true">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="center">
+
+                        <Button
+                            android:id="@+id/option_text1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="25dp"
+                            android:text="1. 블루투스"
+                            android:textColor="@android:color/black"
+                            android:textStyle="bold"
+                            android:background="?attr/selectableItemBackground"
+                            android:visibility="visible" />
+
+                        <ImageButton
+                            android:id="@+id/option_image1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackground"
+                            android:visibility="gone" />
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/choose_option2_btn"
+                    android:layout_width="312dp"
+                    android:layout_height="55dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_gravity="center"
+                    app:cardBackgroundColor="#ffffff"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="0dp"
+                    app:cardPreventCornerOverlap="true"
+                    app:cardUseCompatPadding="true">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="center">
+
+                        <Button
+                            android:id="@+id/option_text2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="25dp"
+                            android:text="2. 음량"
+                            android:textColor="@android:color/black"
+                            android:textStyle="bold"
+                            android:background="?attr/selectableItemBackground"
+                            android:visibility="visible" />
+
+                        <ImageButton
+                            android:id="@+id/option_image2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackground"
+                            android:visibility="gone" />
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/choose_option3_btn"
+                    android:layout_width="312dp"
+                    android:layout_height="55dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_gravity="center"
+                    app:cardBackgroundColor="#ffffff"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="0dp"
+                    app:cardPreventCornerOverlap="true"
+                    app:cardUseCompatPadding="true">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="center">
+
+                        <Button
+                            android:id="@+id/option_text3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="25dp"
+                            android:text="3. 신호"
+                            android:textColor="@android:color/black"
+                            android:textStyle="bold"
+                            android:background="?attr/selectableItemBackground"
+                            android:visibility="visible" />
+
+                        <ImageButton
+                            android:id="@+id/option_image3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackground"
+                            android:visibility="gone" />
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/choose_option4_btn"
+                    android:layout_width="312dp"
+                    android:layout_height="55dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_gravity="center"
+                    app:cardBackgroundColor="#ffffff"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="0dp"
+                    app:cardPreventCornerOverlap="true"
+                    app:cardUseCompatPadding="true">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="center">
+
+                        <Button
+                            android:id="@+id/option_text4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="25dp"
+                            android:text="4. 와이파이"
+                            android:textColor="@android:color/black"
+                            android:textStyle="bold"
+                            android:background="?attr/selectableItemBackground"
+                            android:visibility="visible" />
+
+                        <ImageButton
+                            android:id="@+id/option_image4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackground"
+                            android:visibility="gone" />
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/iconStart_btn"
+                    android:layout_width="200dp"
+                    android:layout_height="75dp"
+                    android:layout_marginTop="38dp"
+                    android:layout_gravity="center"
+                    app:cardBackgroundColor="#D25A5A"
+                    app:cardCornerRadius="16dp"
+                    app:cardElevation="0dp"
+                    app:cardPreventCornerOverlap="true"
+                    app:cardUseCompatPadding="true">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="center">
+
+                        <Button
+                            android:id="@+id/button44"
+                            android:layout_width="199dp"
+                            android:layout_height="77dp"
+                            android:background="#00ff0000"
+                            android:text="문제풀기"
+                            android:textColor="#FFFFFF"
+                            android:textSize="30dp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
             </LinearLayout>
 
         </LinearLayout>
