--- a/app/src/main/res/layout/activity_new_screen_practice.xml
+++ b/app/src/main/res/layout/activity_new_screen_practice.xml
@@ -23,240 +23,6 @@
             android:id="@+id/learning_info_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="106dp"
-                android:background="#D25A5A"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/learning_info_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="다음 아이콘이 의미하는\n용어는 무엇일까요?"
-                    android:textColor="@color/white"
-                    android:textSize="25dp"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-            <!-- 추가된 TextView -->
-            <TextView
-                android:id="@+id/description_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="#001CFF"
-                android:textSize="25dp"
-                android:visibility="gone" />
-
-            <ImageView
-                android:id="@+id/icon_image"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:layout_gravity="center"
-                android:src="@drawable/new_screen_icon_test"
-                android:layout_marginTop="20dp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:orientation="vertical">
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/choose_option1_btn"
-                    android:layout_width="312dp"
-                    android:layout_height="55dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_gravity="center"
-                    app:cardBackgroundColor="#ffffff"
-                    app:cardCornerRadius="10dp"
-                    app:cardElevation="0dp"
-                    app:cardPreventCornerOverlap="true"
-                    app:cardUseCompatPadding="true">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:gravity="center">
-
-                        <Button
-                            android:id="@+id/option_text1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="25dp"
-                            android:text="1. 블루투스"
-                            android:textColor="@android:color/black"
-                            android:textStyle="bold"
-                            android:background="?attr/selectableItemBackground"
-                            android:visibility="visible" />
-
-                        <ImageButton
-                            android:id="@+id/option_image1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="?attr/selectableItemBackground"
-                            android:visibility="gone" />
-
-                    </LinearLayout>
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/choose_option2_btn"
-                    android:layout_width="312dp"
-                    android:layout_height="55dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_gravity="center"
-                    app:cardBackgroundColor="#ffffff"
-                    app:cardCornerRadius="10dp"
-                    app:cardElevation="0dp"
-                    app:cardPreventCornerOverlap="true"
-                    app:cardUseCompatPadding="true">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:gravity="center">
-
-                        <Button
-                            android:id="@+id/option_text2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="25dp"
-                            android:text="2. 음량"
-                            android:textColor="@android:color/black"
-                            android:textStyle="bold"
-                            android:background="?attr/selectableItemBackground"
-                            android:visibility="visible" />
-
-                        <ImageButton
-                            android:id="@+id/option_image2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="?attr/selectableItemBackground"
-                            android:visibility="gone" />
-
-                    </LinearLayout>
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/choose_option3_btn"
-                    android:layout_width="312dp"
-                    android:layout_height="55dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_gravity="center"
-                    app:cardBackgroundColor="#ffffff"
-                    app:cardCornerRadius="10dp"
-                    app:cardElevation="0dp"
-                    app:cardPreventCornerOverlap="true"
-                    app:cardUseCompatPadding="true">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:gravity="center">
-
-                        <Button
-                            android:id="@+id/option_text3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="25dp"
-                            android:text="3. 신호"
-                            android:textColor="@android:color/black"
-                            android:textStyle="bold"
-                            android:background="?attr/selectableItemBackground"
-                            android:visibility="visible" />
-
-                        <ImageButton
-                            android:id="@+id/option_image3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="?attr/selectableItemBackground"
-                            android:visibility="gone" />
-
-                    </LinearLayout>
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/choose_option4_btn"
-                    android:layout_width="312dp"
-                    android:layout_height="55dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_gravity="center"
-                    app:cardBackgroundColor="#ffffff"
-                    app:cardCornerRadius="10dp"
-                    app:cardElevation="0dp"
-                    app:cardPreventCornerOverlap="true"
-                    app:cardUseCompatPadding="true">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:gravity="center">
-
-                        <Button
-                            android:id="@+id/option_text4"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="25dp"
-                            android:text="4. 와이파이"
-                            android:textColor="@android:color/black"
-                            android:textStyle="bold"
-                            android:background="?attr/selectableItemBackground"
-                            android:visibility="visible" />
-
-                        <ImageButton
-                            android:id="@+id/option_image4"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="?attr/selectableItemBackground"
-                            android:visibility="gone" />
-
-                    </LinearLayout>
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/iconStart_btn"
-                    android:layout_width="200dp"
-                    android:layout_height="75dp"
-                    android:layout_marginTop="38dp"
-                    android:layout_gravity="center"
-                    app:cardBackgroundColor="#D25A5A"
-                    app:cardCornerRadius="16dp"
-                    app:cardElevation="0dp"
-                    app:cardPreventCornerOverlap="true"
-                    app:cardUseCompatPadding="true">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:gravity="center">
-
-                        <Button
-                            android:id="@+id/button44"
-                            android:layout_width="199dp"
-                            android:layout_height="77dp"
-                            android:background="#00ff0000"
-                            android:text="문제풀기"
-                            android:textColor="#FFFFFF"
-                            android:textSize="30dp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
-
             android:text="다음 아이콘이 의미하는\n용어는 무엇일까요?"
             android:textColor="@color/white"
             android:textSize="25dp"
@@ -270,7 +36,29 @@
         android:layout_height="120dp"
         android:layout_marginTop="20dp"
         android:src="@drawable/new_screen_icon_test"
-        app:layout_constraintTop_toBottomOf="@id/header_layout"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/header_layout" />
+
+    <TextView
+        android:id="@+id/description_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:textSize="20dp"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/icon_image"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/description_image"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="20dp"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/icon_image"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -279,19 +67,33 @@
         android:layout_width="300dp"
         android:layout_height="45dp"
         android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@id/icon_image"
+        app:layout_constraintTop_toBottomOf="@id/description_image"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="20dp"
-            android:textSize="25dp"
-            android:text="1. 블루투스"
-            android:textColor="@android:color/black"
-            android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/option_text1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:textSize="25dp"
+                android:text="1. 블루투스"
+                android:textColor="@android:color/black"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/option_image1"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="10dp"
+                android:visibility="gone" />
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
@@ -303,15 +105,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="20dp"
-            android:textSize="25dp"
-            android:text="2. 음량"
-            android:textColor="@android:color/black"
-            android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/option_text2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:textSize="25dp"
+                android:text="2. 음량"
+                android:textColor="@android:color/black"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/option_image2"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="10dp"
+                android:visibility="gone" />
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
@@ -323,15 +139,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="20dp"
-            android:textSize="25dp"
-            android:text="3. 신호"
-            android:textColor="@android:color/black"
-            android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/option_text3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:textSize="25dp"
+                android:text="3. 신호"
+                android:textColor="@android:color/black"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/option_image3"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="10dp"
+                android:visibility="gone" />
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
@@ -343,15 +173,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="20dp"
-            android:textSize="25dp"
-            android:text="4. 와이파이"
-            android:textColor="@android:color/black"
-            android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/option_text4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:textSize="25dp"
+                android:text="4. 와이파이"
+                android:textColor="@android:color/black"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/option_image4"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="10dp"
+                android:visibility="gone" />
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
@@ -365,27 +209,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="20dp">
 
-        <ImageView
+        <Button
             android:id="@+id/back_btn"
-            android:src="@drawable/back_btn_nav"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
-            android:text="Previous" />
-        <View
-            android:layout_width="20dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-        <ImageView
+            android:text="이전" />
+
+        <Button
             android:id="@+id/next_btn"
-            android:src="@drawable/next_btn_nav"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_weight="1"
-            android:text="Next" />
+            android:text="다음" />
     </LinearLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
