기초교육 수정

--- a/app/src/main/res/layout/activity_icon_edu.xml
+++ b/app/src/main/res/layout/activity_icon_edu.xml
@@ -25,7 +25,7 @@
                 android:id="@+id/icon_green"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:background="@color/eduColor1"
+                android:background="#089156"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
