--- a/app/src/main/res/layout/activity_appinstall_main.xml
+++ b/app/src/main/res/layout/activity_appinstall_main.xml
@@ -188,14 +188,14 @@
             android:layout_height="200dp"
             android:src="@drawable/appinstall_main_ad_image"
             android:scaleType="fitCenter"
-            android:layout_marginTop="-20dp" />
+            android:layout_marginTop="-10dp" />
 
         <!-- 왼쪽 이미지 -->
         <ImageView
             android:id="@+id/left_image"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/ic_install_logo_naver"
+            android:src="@drawable/ic_appinstall_synergylogo_storke"
             android:layout_below="@id/install_ad_image"
             android:layout_alignParentStart="true"
             android:layout_marginStart="10dp"
@@ -252,7 +252,7 @@
             android:layout_toEndOf="@id/left_image"
             android:layout_marginStart="10dp"
             android:layout_marginTop="1dp"
-            android:text="Senergy • "
+            android:text="Synergy • "
             android:textColor="#1F1F1F"
             android:textSize="16sp" />
 
