--- a/app/src/main/res/layout/activity_icon_detail.xml
+++ b/app/src/main/res/layout/activity_icon_detail.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,7 +11,7 @@
         android:id="@+id/icon_green"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/eduColor1"
+        android:background="#089156"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,19 +83,18 @@
         android:layout_height="0dp"
         android:background="@drawable/round_corner_white_2"
         app:layout_constraintWidth_percent="0.90"
-        app:layout_constraintHeight_percent="0.65"
+        app:layout_constraintHeight_percent="0.58"
         app:layout_constraintTop_toBottomOf="@id/icon_green"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.1"
-        android:layout_marginTop="7dp">
+        app:layout_constraintBottom_toTopOf="@+id/practice_nav_layout"
+        android:layout_marginTop="14dp">
 
         <TextView
             android:id="@+id/icon_tv_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="7dp"
             android:fontFamily="@font/pretendard_semibold"
             android:letterSpacing="-0.05"
             android:text="와이파이(WIFI)"
@@ -103,12 +103,11 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-
         <ImageView
             android:id="@+id/icon_detail_iv"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="6dp"
             app:layout_constraintTop_toBottomOf="@id/icon_tv_2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -117,7 +116,6 @@
 
         <!--원형 넣고 싶으면 이거 바로 위 코드에 넣기 android:background="@drawable/ic_basic_circle"-->
 
-
         <ScrollView
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -125,9 +123,9 @@
             app:layout_constraintStart_toStartOf="parent"
             android:background="@color/bgColor3"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="2dp"
             app:layout_constraintWidth_percent="0.938"
-            app:layout_constraintHeight_percent="0.48">
+            app:layout_constraintHeight_percent="0.47"> <!-- 높이를 약간 줄여줌 -->
 
             <TextView
                 android:id="@+id/another_icon_iv"
@@ -140,4 +138,14 @@
                 android:textColor="@color/black" />
         </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <include
+        android:id="@+id/practice_nav_layout"
+        layout="@layout/practice_nav_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
