--- a/app/src/main/res/layout/activity_find_id_password.xml
+++ b/app/src/main/res/layout/activity_find_id_password.xml
@@ -4,96 +4,145 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#DADADA"
+    android:background="@color/bgColor1"
     tools:context=".FindIdPasswordActivity">
 
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/idpw_scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="16dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:text="아이디 찾기"
-            android:textColor="#000000"
-            android:textSize="18sp" />
-
-        <EditText
-            android:id="@+id/editTextPhoneForId"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:hint="전화번호 입력"
-            android:inputType="phone" />
-
-        <Button
-            android:id="@+id/btnFindId"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#FFFFFF"
-            android:text="아이디 찾기" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginBottom="8dp"
-            android:text="비밀번호 변경"
-            android:textColor="#000000"
-            android:textSize="18sp" />
-
-        <EditText
-            android:id="@+id/editTextPhoneForPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:hint="전화번호 입력"
-            android:inputType="phone" />
-
-        <EditText
-            android:id="@+id/editTextIdForPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:hint="아이디 입력" />
-
-        <Button
-            android:id="@+id/btnVerifyUser"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#FFFFFF"
-            android:text="사용자 인증" />
-
-        <!-- 비밀번호 변경 레이아웃 -->
         <LinearLayout
-            android:id="@+id/layoutChangePassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:visibility="gone">
+            android:padding="16dp">
 
-            <EditText
-                android:id="@+id/editTextNewPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:hint="새 비밀번호 입력"
-                android:inputType="textPassword" />
-
-            <Button
-                android:id="@+id/btnChangePassword"
+            <TextView
+                android:id="@+id/textViewFindId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="#FFFFFF"
-                android:text="비밀번호 변경" />
+                android:layout_marginTop="60dp"
+                android:text="아이디 찾기"
+                android:textColor="#000000"
+                android:textSize="24sp"
+                android:fontFamily="@font/pretendard_bold"
+                android:layout_gravity="center_horizontal" />
+
+            <EditText
+                android:id="@+id/editTextPhoneForId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:hint="전화번호 입력"
+                android:inputType="phone"
+                android:paddingLeft="8dp"
+                android:textColor="#000000"
+                android:textColorHint="#8D838383"
+                android:fontFamily="@font/pretendard_medium"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/btnFindId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="아이디 찾기"
+                android:textSize="16sp"
+                android:fontFamily="@font/pretendard_medium"
+                android:background="@drawable/idpw_find_rounded_background_white"
+                android:layout_gravity="center_horizontal"
+                android:paddingStart="32dp"
+                android:paddingEnd="32dp" />
+
+            <TextView
+                android:id="@+id/textViewChangePassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:text="비밀번호 변경"
+                android:textColor="#000000"
+                android:textSize="24sp"
+                android:fontFamily="@font/pretendard_bold"
+                android:layout_gravity="center_horizontal" />
+
+            <EditText
+                android:id="@+id/editTextPhoneForPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:hint="전화번호 입력"
+                android:inputType="phone"
+                android:textColor="#000000"
+                android:textColorHint="#8D838383"
+                android:fontFamily="@font/pretendard_medium"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/editTextIdForPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:hint="아이디 입력"
+                android:textColor="#000000"
+                android:textColorHint="#8D838383"
+                android:fontFamily="@font/pretendard_medium"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/btnVerifyUser"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="사용자 인증"
+                android:textSize="16sp"
+                android:fontFamily="@font/pretendard_medium"
+                android:background="@drawable/idpw_find_rounded_background_white"
+                android:layout_gravity="center_horizontal"
+                android:paddingStart="32dp"
+                android:paddingEnd="32dp" />
+
+            <LinearLayout
+                android:id="@+id/layoutChangePassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone"
+                android:layout_marginTop="16dp">
+
+
+                <EditText
+                    android:id="@+id/editTextNewPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:hint="새 비밀번호 입력"
+                    android:inputType="textPassword"
+                    android:paddingLeft="8dp"
+                    android:textColor="#000000"
+                    android:textColorHint="#8D838383"
+                    android:fontFamily="@font/pretendard_medium"
+                    android:textSize="20sp" />
+
+                <Button
+                    android:id="@+id/btnChangePassword"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/idpw_find_rounded_background_white"
+                    android:text="비밀번호 변경"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/pretendard_medium"
+                    android:layout_gravity="center_horizontal"
+                    android:paddingStart="32dp"
+                    android:paddingEnd="32dp" />
+            </LinearLayout>
+
         </LinearLayout>
 
-    </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
