--- a/app/src/main/res/layout/fragment_register_id.xml
+++ b/app/src/main/res/layout/fragment_register_id.xml
@@ -4,22 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#DADADA"
+    android:background="@color/bgColor1"
     tools:context=".fragments.FragmentRegisterId">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="26dp"
         android:text="회원가입"
         android:textColor="#000000"
+        android:fontFamily="@font/pretendard_medium"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.092"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="12dp"
+        android:background="#C5C5C5"
+        app:layout_constraintTop_toBottomOf="@id/textView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/editTextId"
@@ -28,13 +39,15 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="150dp"
         android:layout_marginEnd="40dp"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="#000000"
         android:ems="10"
         android:hint="아이디"
         android:inputType="text"
         android:paddingLeft="8dp"
         android:textColor="#000000"
+        android:fontFamily="@font/pretendard_medium"
         android:textColorHint="#8D838383"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView" />
@@ -44,9 +57,11 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
-        android:background="#ffffff"
+        android:background="@drawable/login_border_background_white"
         android:padding="5dp"
         android:text="확인"
+        android:textSize="16sp"
+        android:fontFamily="@font/pretendard_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/editTextId" />
@@ -59,7 +74,7 @@
         android:text="아이디를\n입력해주세요."
         android:textColor="#000000"
         android:textSize="24sp"
-        android:textStyle="bold"
+        android:fontFamily="@font/pretendard_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.113"
         app:layout_constraintStart_toStartOf="parent"
