--- a/app/src/main/res/layout/activity_exam_result_list.xml
+++ b/app/src/main/res/layout/activity_exam_result_list.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    >
 
     <data>
         <!-- 필요한 데이터 변수를 선언합니다. -->
@@ -10,6 +11,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/bgColor1"
+
         tools:context=".learning_space.ExamResultListActivity">
 
         <LinearLayout
@@ -27,12 +30,14 @@
                 android:layout_height="wrap_content"
                 android:text="화면구성 실습"
                 android:textColor="@color/white"
+                android:fontFamily="@font/pretendard_semibold"
                 android:textSize="24sp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="시험 결과"
+                android:fontFamily="@font/pretendard_regular"
                 android:textColor="@color/white"
                 android:textSize="24sp"/>
 
@@ -49,24 +54,27 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/buttons"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
-            android:layout_marginLeft="64dp"
-            android:layout_marginRight="64dp"
             app:layout_constraintTop_toBottomOf="@id/recyclerView"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp">
 
             <FrameLayout
-                android:layout_width="128dp"
+                android:id="@+id/back_button_container"
+                android:layout_width="0dp"
                 android:layout_height="64dp"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/salmon_rounded_button"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:background="@drawable/salmon_rounded_button">
+                app:layout_constraintEnd_toStartOf="@+id/view_all_button_container"
+                app:layout_constraintWidth_percent="0.4">
 
                 <com.sungkyul.synergy.utils.GalaxyButton
                     android:id="@+id/back_button"
@@ -85,19 +93,22 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:text="돌아가기"
-                        android:textSize="16sp"
+                        android:textSize="20sp"
+                        android:fontFamily="@font/pretendard_semibold"
                         android:textColor="@color/white"/>
-
                 </LinearLayout>
-
             </FrameLayout>
 
             <FrameLayout
-                android:layout_width="128dp"
+                android:id="@+id/view_all_button_container"
+                android:layout_width="0dp"
                 android:layout_height="64dp"
+                android:layout_marginStart="8dp"
+                android:background="@drawable/salmon_rounded_button"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:background="@drawable/salmon_rounded_button">
+                app:layout_constraintStart_toEndOf="@id/back_button_container"
+                app:layout_constraintWidth_percent="0.4">
 
                 <com.sungkyul.synergy.utils.GalaxyButton
                     android:id="@+id/view_all_button"
@@ -116,14 +127,11 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:text="다시 풀기"
-                        android:textSize="16sp"
+                        android:textSize="20sp"
+                        android:fontFamily="@font/pretendard_semibold"
                         android:textColor="@color/white"/>
-
                 </LinearLayout>
-
             </FrameLayout>
-
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
