--- a/app/src/main/res/layout/activity_screen_topbar.xml
+++ b/app/src/main/res/layout/activity_screen_topbar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootLayout"
@@ -7,6 +8,11 @@
     android:layout_height="match_parent"
     tools:context=".edu_space.default_app.todo.DefaultAppBarActivity"
     android:background="@drawable/screenedu_background">
+
+    <com.sungkyul.synergy.utils.edu.EduScreen
+        android:id="@+id/edu_screen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <include
         android:id="@+id/include_toolbar"
