--- a/app/src/main/res/layout/activity_screen_menu.xml
+++ b/app/src/main/res/layout/activity_screen_menu.xml
@@ -91,6 +91,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/naver_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
