학습능력 확인하기 디스플레이 크기 맞춰 텍스트크기 변경적용

--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -209,7 +209,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
-                    android:text="학습능력\n평가하기"
+                    android:text="학습능력\n확인하기"
                     android:textAlignment="center"
                     android:textColor="#333333"
                     android:fontFamily="@font/pretendard_semibold" />
