화면 구성 실습 링크들 연결

--- a/app/src/main/res/layout/fragment_exam_result.xml
+++ b/app/src/main/res/layout/fragment_exam_result.xml
@@ -94,7 +94,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="12dp"
-            android:src="@drawable/todo_rect"
+            android:src="@drawable/ic_solving_back"
             android:scaleType="centerInside"
             app:layout_constraintTop_toBottomOf="@+id/back_text"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -138,7 +138,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="12dp"
-            android:src="@drawable/todo_rect"
+            android:src="@drawable/ic_solving_allcheck"
             android:scaleType="centerInside"
             app:layout_constraintTop_toBottomOf="@+id/view_all_text"
             app:layout_constraintBottom_toBottomOf="parent"
